# greptimeai

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/actions/: action.yml
.github/workflows/: ci.yml  pr-title-check.yml  publish-pypi.yml  shared-steps.yml
docs/: metrics.md  trace.md
examples/: langchain.ipynb  openai.ipynb
greptime-llm-langchain-instrument/: pyproject.toml
greptime-llm-langchain-instrument/src/greptime_llm_langchain_instrument/: __init__.py
langchain/: README.md  pyproject.toml
langchain-example/: README.md  llm.md  pyproject.toml
langchain-example/dashboard/: grafana.json
langchain-example/docker/: docker-compose.yml  otel-collector-config.yml  prometheus.yml
langchain-example/src/langchain_example/: __init__.py  app.py  langchains.py  llm.py  llmonitors.py
langchain/docs/: grafana.json
langchain/src/greptime_llm_langchain_instrument/: __init__.py  callback.py  test_trace.py
src/greptimeai/: __init__.py  collection.py  collector.py  logger.py  openai_patcher.py  scope.py  tracker.py
src/greptimeai/callbacks/: langchain_callback.py
src/greptimeai/collector/: __init__.py  collection.py
src/greptimeai/extractor/: __init__.py  openai.py
src/greptimeai/extractor/openai/: __init__.py
src/greptimeai/extractor/openai_extractor/: __init__.py  audio_extractor.py  chat_completion_extractor.py  completion_extractor.py  embedding_extractor.py  file_extractor.py  fine_tuning_extractor.py  image_extractor.py  model_extractor.py  moderation_extractor.py
src/greptimeai/labels/: __init__.py
src/greptimeai/langchain/: __init__.py  callback.py  test_trace.py
src/greptimeai/langchain_callback/: __init__.py
src/greptimeai/langchain_tracker/: callback.py
src/greptimeai/openai/: __init__.py  collector.py  openai_tracker.py  recorder.py
src/greptimeai/openai/utils/: tokens.py
src/greptimeai/openai_tracker/: __init__.py  tracker.py
src/greptimeai/openai_tracker/utils/: tokens.py
src/greptimeai/patchee/: __init__.py
src/greptimeai/patchee/openai/: audio.py  file.py  fine_tuning.py  image.py
src/greptimeai/patchee/openai_patchee/: __init__.py  audio.py  chat_completion.py  completion.py  embedding.py  file.py  fine_tuning.py  image.py  model.py  moderation.py  retry.py
src/greptimeai/patcher/: __init__.py
src/greptimeai/patcher/openai/: __init__.py  base.py  retry.py
src/greptimeai/patcher/openai_patcher/: __init__.py  base.py  retry.py  stream.py
src/greptimeai/trackee/: __init__.py
src/greptimeai/trackee/openai/: __init__.py  chat_completion.py  completion.py  embedding.py  file.py  image.py  model.py
src/greptimeai/tracker/: __init__.py  openai.py  openai_tracker.py
src/greptimeai/tracker/openai_tracker/: __init__.py  chat_completion.py  completion.py  embedding.py  public.py
src/greptimeai/utils/: _socket.py  attr.py  json_encoder.py  openai_token.py
src/greptimeai/utils/openai/: parser.py  stream.py  token.py
tests/collection/: test_collection_helper_func.py  test_duration.py  test_helper_func.py  test_observation.py  test_trace.py
tests/integrations/database/: db.py  model.py
tests/integrations/langchain_/: test_langchain_with_openai_chat_models.py  test_llm.py  test_with_openai_chat_models.py
tests/integrations/openai_tracker/: __init__.py  model.py  test_async.py  test_audio.py  test_chat_parameters.py  test_error.py  test_image.py  test_raw_response.py  test_retry.py  test_stream.py  test_sync.py
tests/langchain/: test_langchain_helper_func.py
tests/langchain_/: test_langchain_helper_func.py
tests/langchain_callback/: test_langchain_helper_func.py
tests/langchain_tracker/: test_langchain_helper_func.py
tests/openai/: test_tokens.py
tests/openai_tracker/: test_tokens.py
tests/utils/: test_attr.py  test_openai_token.py  test_socket.py
tests/utils/openai/: test_parser.py  test_token.py
