[project]
name = "langchain-example"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yuanbohan", email = "yuanbo.han@gmail.com" }
]
dependencies = [
    "openai>=0.28.0",
    "langchain>=0.0.27",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-api>=1.20.0",
    "Flask>=2.3.3",
    "prometheus-client>=0.17.1",
    "opentelemetry-exporter-prometheus>=1.12.0rc1",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
app = { cmd = "python src/langchain_example/app.py" }
