[project]
name = "langchain-example"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yuanbohan", email = "yuanbo.han@gmail.com" }
]
dependencies = [
    "langchain>=0.0.27",
    "Flask>=2.3.3",
    "chromadb>=0.4.12",
    "openai>=0.28.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
app = { cmd = "python src/langchain_example/app.py" }
