[project]
name = "greptime-llm-langchain-instrument"
version = "0.1.0"
description = "LangChain instrument for Greptime LLM service"
authors = [
    { name = "Ning Sun", email = "sunning@greptime.cloud" }
]
dependencies = [
    "langchain>=0.0.285",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-prometheus>=1.12.0rc1",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=23.2.1",
    "flake8>=6.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true
