[project]
name = "greptime-llm-langchain-instrument"
version = "0.1.0"
description = "LangChain instrument for Greptime LLM service"
authors = [
    { name = "Ning Sun", email = "sunning@greptime.cloud" }
]
dependencies = [
    "langchain>=0.0.285",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "flake8>=6.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
test = { cmd = "python -m unittest -v src/greptime_llm_langchain_instrument/test_trace.py" }
